deploy-package/renderton-workflow/charts/rendertron-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rendertron-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: rendertron-kube
        image: yomofo2s/rendertron:latest
        ports:
        - containerPort: 80
