deploy-package/renderton-workflow/charts/rendertron-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: ingress-nginx
  annotations:
  #for whitelisting - inginx.ingress.kubernetes.io/whitelist-source-range: "1.1.1.1/24"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kuburendertron.com
    http:
      paths:
      - path: /testpath2
        pathType: Prefix
        backend:
          service:
            name: ingress-nginx
            port:
              number: 80
